--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,6 @@
     @apply relative cursor-pointer text-lg font-medium before:absolute before:inset-x-0 before:-bottom-1.5 before:h-0.5 before:origin-left before:scale-x-0 before:transform before:rounded-bl before:bg-black before:transition-all before:duration-200 hover:before:scale-x-100;
   }
   .tabPanel {
-    @apply grid grid-cols-2 gap-4 sm:grid-cols-3 md:grid-cols-4;
+    @apply grid grid-cols-2 justify-center gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
   }
 }
