--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,21 @@
     @apply cursor-pointer opacity-75 transition hover:opacity-100;
   }
   .headerIcon {
-    @apply h-8 w-8 cursor-pointer opacity-75 transition hover:opacity-100;
+    @apply h-[34px] w-[34px] cursor-pointer opacity-75 transition hover:opacity-100;
   }
   .link {
     @apply relative cursor-pointer text-lg font-medium before:absolute before:inset-x-0 before:-bottom-1.5 before:h-0.5 before:origin-left before:scale-x-0 before:transform before:rounded-bl before:bg-black before:transition-all before:duration-200 hover:before:scale-x-100;
   }
   .tabPanel {
     @apply grid grid-cols-2 justify-center gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
+  }
+  .formInfo {
+    @apply flex w-[400px] flex-col items-start text-base;
+  }
+  .formInput {
+    @apply h-[35px] w-[100%] rounded border-2 border-solid p-2 outline-none focus:border-green-500;
+  }
+  .formTextarea {
+    @apply max-h-24 w-[100%]  rounded border-2 border-solid p-2 outline-none focus:border-green-500;
   }
 }
